# system-programming

./: .gitignore  README.md
Lectures/1.Introduction/examples/: 1_args_and_env.cpp  2_errno.cpp  3_conf.cpp  CMakeLists.txt  README.md
Lectures/10.Async/examples/: 1_tcp_client.cpp  1_tcp_server_with_poll.cpp  1_tcp_server_with_signals.cpp  2_aio_performance.cpp  3_aio_notifications.cpp  4_unix_file_client.cpp  4_unix_file_server.cpp  5_socket_performance.cpp  CMakeLists.txt  common.cpp  common.hpp  unix_common.hpp
Lectures/11.Sessions/examples/: 1_noncanonical_mode.cpp  2_grumpy_terminal.cpp  CMakeLists.txt
Lectures/12.Ptrace/examples/: 1_signal_steal.cpp  2_hardware_breakpoint.cpp  3_software_breakpoint.cpp  4_nodebug.cpp  5_strange_threads.cpp  CMakeLists.txt
Lectures/2.Files/examples/: 1_copy_file.cpp  2_dup.cpp  3_fopen.cpp  3_lseek_and_stat.cpp  4_fopen.cpp  4_lseek_and_stat.cpp  5_flock.cpp  6_ioctl.cpp  7_inotify.cpp  8_mmap.cpp  CMakeLists.txt  README.md  check.hpp
Lectures/3.Processes/examples/: 10_files.cpp  1_fork.cpp  2_exit_and_atexit.cpp  3_waitpid.cpp  4_orphans.cpp  5_exec.cpp  5_script.py  6_dlopen.cpp  7_limits.cpp  8_proc.cpp  9_guard_page.cpp  CMakeLists.txt  README.md  check.hpp
Lectures/4.Signals/examples/: 1_kill.cpp  2_sigaction.cpp  3_error_in_handler.cpp  3_malloc_in_handler.cpp  3_wrong_handler.cpp  4_sigwaitinfo.cpp  5_rtsignal.cpp  6_eintr.cpp  7_hwexceptions.cpp  8_abort.cpp  9_alarm.cpp  CMakeLists.txt  README.md  common.h
Lectures/5.IPC/examples/: 1_file.cpp  2_guard_page.cpp  2_mmap.cpp  3.2_mmap_nofile.cpp  3_mmap.cpp  3_shm.cpp  4_semaphore.cpp  4_shm.cpp  5_pipe.cpp  5_semaphore.cpp  6_named_pipe.cpp  7_named_pipe.cpp  7_pipe_buffer.cpp  8_mqueue.cpp  8_pipe_buffer.cpp  9_mqueue.cpp  CMakeLists.txt  README.md  common.hpp
Lectures/6.Threads/examples/: 1_create_thread.cpp  2_cancel_thread.cpp  3_1_thread_local.cpp  3_2_tls.cpp  4_signals.cpp  5_nice_and_affinity.cpp  CMakeLists.txt  README.md  check.hpp  common.hpp
Lectures/7.Synchronization/examples/: 1_atomic.cpp  2_locks.cpp  2_mutex_and_spinlock.cpp  3_cond.cpp  4_barrier.cpp  5_futex.cpp  CMakeLists.txt  check.hpp  common.cpp  common.hpp
Lectures/8.Network/examples/: 1_tcp_client.cpp  1_tcp_server.cpp  2_udp_client.cpp  2_udp_server.cpp  3_raw.cpp  CMakeLists.txt  common.hpp
Lectures/9.Users/examples/: 1_setuid.cpp  2_drop_rights.cpp  CMakeLists.txt  check.hpp  common.h
