project(lecture2)

set(CMAKE_CXX_STANDARD 17)

add_executable(1_fork 1_fork.cpp)
add_executable(2_exit_and_atexit 2_exit_and_atexit.cpp)
add_executable(3_waitpid 3_waitpid.cpp)
add_executable(5_exec 5_exec.cpp)
add_executable(7_limits 7_limits.cpp)
add_executable(4_orphans 4_orphans.cpp)
add_executable( 6_dlopen 6_dlopen.cpp)
add_executable(8_proc 8_proc.cpp)
