project(lecture5)

set(CMAKE_CXX_STANDARD 17)

add_executable(1_file 1_file.cpp)
add_executable(2_guard_page 2_guard_page.cpp)
add_executable(3_mmap 3_mmap.cpp)
add_executable(4_shm 4_shm.cpp)
add_executable(5_semaphore 5_semaphore.cpp)
add_executable(6_pipe 6_pipe.cpp)
add_executable(7_named_pipe 7_named_pipe.cpp)
add_executable(8_pipe_buffer 8_pipe_buffer.cpp)
add_executable(9_mqueue 9_mqueue.cpp)

