project(lecture5)

set(CMAKE_CXX_STANDARD 17)

add_executable(1_file 1_file.cpp)
add_executable(2_mmap 2_mmap.cpp)
add_executable(3_shm 3_shm.cpp)
add_executable(4_semaphore 4_semaphore.cpp)
add_executable(5_pipe 5_pipe.cpp)
add_executable(6_named_pipe 6_named_pipe.cpp)
add_executable(7_pipe_buffer 7_pipe_buffer.cpp)
add_executable(8_mqueue 8_mqueue.cpp)

