cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 20)
set(THREADS_PREFER_PTHREAD_FLAG ON)
project(lecture7)
find_package(Threads REQUIRED)
link_libraries(Threads::Threads)

add_executable(1_atomic 1_atomic.cpp common.cpp)
add_executable(2_locks 2_locks.cpp common.cpp)
add_executable(3_cond 3_cond.cpp common.cpp)
add_executable(4_barrier 4_barrier.cpp common.cpp)
add_executable(5_futex 5_futex.cpp common.cpp)
